start connecting contentful

--- a/src/components/Typography.astro
+++ b/src/components/Typography.astro
@@ -7,6 +7,7 @@
     cursor: pointer;
     text-decoration: none;
     width: max-content;
+    color: inherit;
   }
   a:hover {
     filter: brightness(125%);
