update header links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,14 +15,11 @@ import Section from "./Section.astro";
     <div class="links-wrapper">
       <a
         class="typography__beta typography--link color--black"
-        href="./calendar.html"
+        href="/calendar"
       >
         <b> Calendar</b>
       </a>
-      <a
-        class="typography__beta typography--link color--black"
-        href="./news.html"
-      >
+      <a class="typography__beta typography--link color--black" href="/news">
         <b> News </b>
       </a>
     </div>
