--- a/src/components/Typography.astro
+++ b/src/components/Typography.astro
@@ -49,6 +49,12 @@
     font-family: "Merriweather", sans;
     font-size: var(--font-size-smd);
   }
+
+  .typography__echo {
+    font-family: "Rubik", sans-serif;
+    font-size: var(--font-size-sm);
+  }
+
   @media (max-width: 840px) {
     .typography__alpha {
       font-size: var(--font-size-sm);
