--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -76,5 +76,6 @@ import Footer from "../components/Footer.astro";
   a {
     margin: 0;
     line-height: 1.4;
+    font-weight: normal;
   }
 </style>
