--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,8 +19,11 @@ import Section from "./Section.astro";
       >
         <b> Calendar</b>
       </a>
-      <a class="typography__beta typography--link color--black" href="/news">
-        <b> News </b>
+      <a
+        class="typography__beta typography--link color--black"
+        href="/programming"
+      >
+        <b> Programming </b>
       </a>
     </div>
   </div>
