fix columns on mobile

--- a/src/pages/programming.astro
+++ b/src/pages/programming.astro
@@ -91,4 +91,9 @@ const upcomingProgramsByMonthDisplay = Object.keys(upcomingProgramsByMonth)
   .programs-wrapper {
     column-count: 2;
   }
+  @media (max-width: 840px) {
+    .programs-wrapper {
+      column-count: 1;
+    }
+  }
 </style>
