fix title collision

--- a/src/pages/Programming.css
+++ b/src/pages/Programming.css
@@ -1,4 +1,4 @@
-.title {
+.page-title {
   font-family: "Merriweather", sans;
   font-size: var(--font-size-xxl);
   font-weight: var(--font-weight-bold);
